<resources>
    <string name="app_name">Weather App</string>
    <string name="Search">Search</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="cityName">City Name</string>
    <string name="idTxt">ID</string>
    <string name="max_temp">Max temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="next_day_weather">Next Day Weather</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="weather_date">Weather Date</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="changeLang">Change Language</string>
</resources>
